[gd_scene load_steps=13 format=3 uid="uid://c3xbu6h63634t"]

[ext_resource type="Script" uid="uid://ldqslm2x422i" path="res://ScenarioScript/BedroomAreaSS/BedroomInterface.gd" id="1_uny11"]
[ext_resource type="Texture2D" uid="uid://ktj0oi4kw218" path="res://Assets/Scenarios/FirstFloor/BedroomBackground.png" id="2_iuy31"]
[ext_resource type="AudioStream" uid="uid://idyf1s54ckh8" path="res://Assets/Music/Ambience/Doors/ClosingMetalDoor.mp3" id="3_i1h45"]
[ext_resource type="Texture2D" uid="uid://desdyamfkapro" path="res://Assets/Indication/BackArrow.png" id="3_io1r0"]
[ext_resource type="Texture2D" uid="uid://be2fiufdusimd" path="res://Assets/Items/Flashlight.png" id="3_qko02"]
[ext_resource type="Texture2D" uid="uid://dmjk4h5a8y3xp" path="res://Assets/Items/PaperNote.png" id="7_vnund"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5u3c"]
size = Vector2(96, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g45pp"]
size = Vector2(66, 61)

[sub_resource type="Animation" id="Animation_xq8d3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_s5cg3"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_el4sy"]
resource_name = "transition"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbj0b"]
_data = {
&"RESET": SubResource("Animation_xq8d3"),
&"fade_in": SubResource("Animation_s5cg3"),
&"transition": SubResource("Animation_el4sy")
}

[node name="BedroomInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uny11")

[node name="BedroomBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 657.0
mouse_filter = 2
texture = ExtResource("2_iuy31")
expand_mode = 1

[node name="Exit" type="Sprite2D" parent="."]
position = Vector2(560, 600)
scale = Vector2(0.09592013, 0.11551353)
texture = ExtResource("3_io1r0")

[node name="ExitBedroom" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 553.0
offset_right = 738.0
offset_bottom = 653.0

[node name="TransCorridor" type="Button" parent="ExitBedroom"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Flashlight" type="Area2D" parent="."]
position = Vector2(296, 452)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flashlight"]
position = Vector2(19, -11)
shape = SubResource("RectangleShape2D_q5u3c")

[node name="Sprite2D" type="Sprite2D" parent="Flashlight"]
position = Vector2(19.5, -10)
scale = Vector2(0.0927734, 0.0800781)
texture = ExtResource("3_qko02")

[node name="Note" type="Area2D" parent="."]
position = Vector2(926, 518)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Note"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_g45pp")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Note"]
position = Vector2(-2, 0)
scale = Vector2(0.0724284, 0.0854492)
texture = ExtResource("7_vnund")

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 649.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationFade" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pbj0b")
}

[node name="DoorClosing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i1h45")

[connection signal="pressed" from="ExitBedroom/TransCorridor" to="." method="_on_trans_corridor_pressed"]
[connection signal="input_event" from="Flashlight" to="." method="_on_flashlight_input_event"]
[connection signal="input_event" from="Note" to="." method="_on_note_input_event"]
